# market-making-game

./: .gitignore  Dockerfile  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: market-making-game.tex
examples/: demo.py
src/: __init__.py  cli.py
src/core/: __init__.py  analytics.py  difficulty.py  glosten_milgrom.py  inventory.py  market.py  market_maker.py  order_flow.py
src/viz/: __init__.py  app.py
tests/: test_analytics.py  test_glosten_milgrom.py  test_market.py  test_order_flow.py
